--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -14,23 +14,23 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :lesson_date %><br>
+    <%= f.label :lesson_date, '레슨 일자' %><br>
     <%= f.datetime_select :lesson_date %>
   </div>
   <div class="field">
-    <%= f.label :turn %><br>
+    <%= f.label :turn, '차수'%><br>
     <%= f.number_field :turn %>
   </div>
   <div class="field">
-    <%= f.label :goal %><br>
+    <%= f.label :goal, '목표' %><br>
     <%= f.text_area :goal %>
   </div>
   <div class="field">
-    <%= f.label :song %><br>
+    <%= f.label :song, '연습곡'%><br>
     <%= f.text_field :song %>
   </div>
   <div class="field">
-    <%= f.label :homework %><br>
+    <%= f.label :homework, '과제'%><br>
     <%= f.text_field :homework %>
   </div>
   <div class="actions">
