--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,14 +1,13 @@
-<h1>Listing lessons</h1>
-
+<h1>레슨 목록</h1>
+<%=@lessons.first.user.name%>님의 레슨 일정입니다.
 <table>
   <thead>
     <tr>
-      <th>Lesson date</th>
-      <th>Turn</th>
-      <th>Goal</th>
-      <th>Song</th>
-      <th>Homework</th>
-      <th>User</th>
+      <th>레슨 일자</th>
+      <th>차수</th>
+      <th>목표</th>
+      <th>연습곡</th>
+      <th>과제</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,10 +20,9 @@
         <td><%= lesson.goal %></td>
         <td><%= lesson.song %></td>
         <td><%= lesson.homework %></td>
-        <td><%= lesson.user.name %></td>
         <td><%= link_to 'Show', user_lesson_path(@user, lesson) %></td>
         <td><%= link_to 'Edit', edit_user_lesson_path(@user, lesson) %></td>
-        <td><%= link_to 'Destroy', user_lesson_path(@user, lesson), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', user_lesson_path(@user, lesson), method: :delete, data: { confirm: 'Are you sure?' }%></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Lesson', new_user_lesson_path %>
+<%= link_to '새 레슨 등록하기', new_user_lesson_path %>
