--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New lesson</h1>
+<h1>새로운 레슨 등록하기</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_lessons_path %>
+<%= link_to '돌아가기', user_lessons_path %>
