--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -30,5 +30,5 @@
   <%= @lesson.user %>
 </p>
 
-<%= link_to 'Edit', edit_lesson_path(@lesson) %> |
-<%= link_to 'Back', lessons_path %>
+<%= link_to 'Edit', edit_user_lesson_path(@user, @lesson) %> |
+<%= link_to 'Back', user_lessons_path(@user) %>
