--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing user</h1>
+<h1>학생 정보 수정하기</h1>
 
 <%= render 'form' %>
 
+
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+
