--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,10 @@
-<h1>Listing users</h1>
-
+<h1>학생 목록</h1>
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Phone</th>
-      <th>Email</th>
+      <th>학생이름</th>
+      <th>전화번호</th>
+      <th>이메일</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,12 +12,12 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
+        <td><%= link_to user.name, user_path(user) %></td>
         <td><%= user.phone %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '레슨보기', user_lessons_path(user) %></td>
+        <!-- <td><#%= link_to '수정하기', edit_user_path(user) %></td> -->
+        <!-- <td><#%= link_to '삭제하기', user, method: :delete, data: { confirm: '정말 삭제할까용?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to '학생 등록하기', new_user_path %>
