--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,52 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>학생이름</strong>
   <%= @user.name %>
 </p>
 
 <p>
-  <strong>Phone:</strong>
+  <strong>전화번호</strong>
   <%= @user.phone %>
 </p>
 
 <p>
-  <strong>Email:</strong>
+  <strong>이메일</strong>
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<p>
+  <strong>수강 내역</strong>
+<table>
+  <thead>
+    <tr>
+      <th>레슨 일자</th>
+      <th>차수</th>
+      <th>목표</th>
+      <th>연습곡</th>
+      <th>과제</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @lessons.each do |lesson| %>
+      <tr>
+        <td><%= lesson.lesson_date %></td>
+        <td><%= lesson.turn %></td>
+        <td><%= lesson.goal %></td>
+        <td><%= lesson.song %></td>
+        <td><%= lesson.homework %></td>
+        <td><%= link_to 'Show', user_lesson_path(@user, lesson) %></td>
+        <td><%= link_to 'Edit', edit_user_lesson_path(@user, lesson) %></td>
+        <td><%= link_to 'Destroy', user_lesson_path(@user, lesson), method: :delete, data: { confirm: 'Are you sure?' }%></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+</p>  
+
+
+<%= link_to '수정하기', edit_user_path(@user) %> |
+<%= link_to '삭제하기', @user, method: :delete, data: { confirm: '정말 삭제할까용?' } %>
+<%= link_to '돌아가기', users_path %>
