--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :day, '날짜' %><br>
-    <%= f.text_field :day %>
+    <%= select_tag "schedule[user_id]", options_for_select([['월', 'monday'], ['화', 'tuesday'],['수', 'wednesday'], ['목', 'thursday'],['금', 'friday'], ['토', 'saturday'],['일', 'sunday']]) %>
   </div>
   <div class="field">
     <%= f.label :hour, '시간' %><br>
