--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,6 +1,6 @@
 <h1>레슨 스케쥴 현황</h1>
 
-<table>
+<!-- table>
   <thead>
     <tr>
       <th>날짜</th>
@@ -8,18 +8,27 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-  <tbody>
-    <% @schedules.each do |schedule| %>
-      <tr>
-        <td><%= link_to schedule.day, edit_schedule_path(schedule) %></td>
-        <td><%= schedule.hour %></td>
-        <td><%= link_to schedule.user.name, user_lessons_path(schedule.user) %></td>
+  <tbody> -->
+    <% @week.each do |w| %>
+      <% w.each do |s| %>
+       <%= s.day %>
+      <% end %> 
+    <!-- <div class="monday"><%#= link_to schedule.day, edit_schedule_path(schedule) %></div>
+    <div class="tuesday"></div>
+    <div class="wednesday"></div>
+    <div class="thursday"></div>
+    <div class="friday"></div>
+    <div class="saturday"></div> -->
+      <!-- <tr>
+        <td></td>
+        <td><%#= schedule.hour %></td>
+        <td><%#= link_to schedule.user.name, user_lessons_path(schedule.user) %></td>
         <td><%#= link_to '수정', edit_schedule_path(schedule) %></td>
         <td><%#= link_to '삭제', schedule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      </tr> -->
     <% end %>
-  </tbody>
-</table>
+  <!-- </tbody>
+</table> -->
 
 <br>
 
