--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,35 +1,60 @@
 <h1>레슨 스케쥴 현황</h1>
 
-<!-- table>
-  <thead>
-    <tr>
-      <th>날짜</th>
-      <th>시간</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody> -->
-    <% @week.each do |w| %>
-      <% w.each do |s| %>
-       <%= s.day %>
-      <% end %> 
-    <!-- <div class="monday"><%#= link_to schedule.day, edit_schedule_path(schedule) %></div>
-    <div class="tuesday"></div>
-    <div class="wednesday"></div>
-    <div class="thursday"></div>
-    <div class="friday"></div>
-    <div class="saturday"></div> -->
-      <!-- <tr>
-        <td></td>
-        <td><%#= schedule.hour %></td>
-        <td><%#= link_to schedule.user.name, user_lessons_path(schedule.user) %></td>
-        <td><%#= link_to '수정', edit_schedule_path(schedule) %></td>
-        <td><%#= link_to '삭제', schedule, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr> -->
-    <% end %>
-  <!-- </tbody>
-</table> -->
-
+    <div class="monday">
+      <p>월요일</p>
+      <% @monday.each do |monday| %>
+       <p><%= link_to monday.user.name, user_lessons_path(monday.user) %></p>
+       <p><%= monday.hour %></p>
+       <p><%= link_to '수정', edit_schedule_path(monday) %></p>
+       <p><%= link_to '삭제', monday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% end %>
+    </div>
+    <div class="tuesday">
+      <p>화요일</p>
+      <% @tuesday.each do |tuesday| %>
+       <p><%= link_to tuesday.user.name, user_lessons_path(tuesday.user) %></p>
+       <p><%= tuesday.hour %></p>
+       <p><%= link_to '수정', edit_schedule_path(tuesday) %></p>
+       <p><%= link_to '삭제', tuesday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% end %>
+    </div>
+    <div class="wednesday">
+      <p>수요일</p>
+      <% @wednesday.each do |wednesday| %>
+       <p><%= link_to wednesday.user.name, user_lessons_path(wednesday.user) %></p>
+       <p><%= wednesday.hour %></p>
+       <p><%= link_to '수정', edit_schedule_path(wednesday) %></p>
+       <p><%= link_to '삭제', wednesday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% end %>
+    </div>
+    <div class="thursday">
+      <p>목요일</p>
+      <% @thursday.each do |thursday| %>
+       <p><%= link_to thursday.user.name, user_lessons_path(thursday.user) %></p>
+       <p><%= thursday.hour %></p>
+       <p><%= link_to '수정', edit_schedule_path(thursday) %></p>
+       <p><%= link_to '삭제', thursday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% end %>
+    </div>
+    <div class="friday">
+      <p>금요일</p>
+      <% @monday.each do |friday| %>
+       <p><%= link_to friday.user.name, user_lessons_path(friday.user) %></p>
+       <p><%= friday.hour %></p>
+       <p><%= link_to '수정', edit_schedule_path(friday) %></p>
+       <p><%= link_to '삭제', friday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% end %>
+    </div>
+    <div class="saturday">
+      <p>토요일</p>
+      <% @saturday.each do |saturday| %>
+       <p><%= link_to saturday.user.name, user_lessons_path(saturday.user) %></p>
+       <p><%= saturday.hour %></p>
+       <p><%= link_to '수정', edit_schedule_path(saturday) %></p>
+       <p><%= link_to '삭제', saturday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      <% end %>
+    </div>
 <br>
-
+<div class="bottom">
 <%= link_to '새 일정 등록', new_schedule_path %>
+<div>
