메뉴 네비 나오도록 수정

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="span3" id="sidebar">
-    <ul class="nav nav-list bs-docs-sidenav nav-collapse collapse">
+  <div>
+    <ul>
       <li>
         <%= link_to schedules_path do %>
-        <i class="icon-chevron-right"></i>홈
+        <i class=""></i>홈
         <% end %>
       </li>
       <li>
         <%= link_to users_path do %>
-        <i class="icon-chevron-right"></i>학생 현황
+        <i class=""></i>학생 현황
         <% end %>
       </li>
     </ul>
