--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,60 +1,64 @@
-<h1>레슨 스케쥴 현황</h1>
+    <div class="col-md-9">
 
-    <div class="monday">
-      <p>월요일</p>
-      <% @monday.each do |monday| %>
-       <p><%= link_to monday.user.name, user_lessons_path(monday.user) %></p>
-       <p><%= monday.hour %></p>
-       <p><%= link_to '수정', edit_schedule_path(monday) %></p>
-       <p><%= link_to '삭제', monday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
-    </div>
-    <div class="tuesday">
-      <p>화요일</p>
-      <% @tuesday.each do |tuesday| %>
-       <p><%= link_to tuesday.user.name, user_lessons_path(tuesday.user) %></p>
-       <p><%= tuesday.hour %></p>
-       <p><%= link_to '수정', edit_schedule_path(tuesday) %></p>
-       <p><%= link_to '삭제', tuesday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
-    </div>
-    <div class="wednesday">
-      <p>수요일</p>
-      <% @wednesday.each do |wednesday| %>
-       <p><%= link_to wednesday.user.name, user_lessons_path(wednesday.user) %></p>
-       <p><%= wednesday.hour %></p>
-       <p><%= link_to '수정', edit_schedule_path(wednesday) %></p>
-       <p><%= link_to '삭제', wednesday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
-    </div>
-    <div class="thursday">
-      <p>목요일</p>
-      <% @thursday.each do |thursday| %>
-       <p><%= link_to thursday.user.name, user_lessons_path(thursday.user) %></p>
-       <p><%= thursday.hour %></p>
-       <p><%= link_to '수정', edit_schedule_path(thursday) %></p>
-       <p><%= link_to '삭제', thursday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
-    </div>
-    <div class="friday">
-      <p>금요일</p>
-      <% @monday.each do |friday| %>
-       <p><%= link_to friday.user.name, user_lessons_path(friday.user) %></p>
-       <p><%= friday.hour %></p>
-       <p><%= link_to '수정', edit_schedule_path(friday) %></p>
-       <p><%= link_to '삭제', friday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
-    </div>
-    <div class="saturday">
-      <p>토요일</p>
-      <% @saturday.each do |saturday| %>
-       <p><%= link_to saturday.user.name, user_lessons_path(saturday.user) %></p>
-       <p><%= saturday.hour %></p>
-       <p><%= link_to '수정', edit_schedule_path(saturday) %></p>
-       <p><%= link_to '삭제', saturday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      <% end %>
-    </div>
-<br>
-<div class="bottom">
-<%= link_to '새 일정 등록', new_schedule_path %>
-<div>
+        <p>레슨 스케쥴 현황</p>
+
+        <div class="monday">
+          <p>월요일</p>
+          <% @monday.each do |monday| %>
+           <p><%= link_to monday.user.name, user_lessons_path(monday.user) %></p>
+           <p><%= monday.hour %></p>
+           <p><%= link_to '수정', edit_schedule_path(monday) %></p>
+           <p><%= link_to '삭제', monday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
+        </div>
+        <div class="tuesday">
+          <p>화요일</p>
+          <% @tuesday.each do |tuesday| %>
+           <p><%= link_to tuesday.user.name, user_lessons_path(tuesday.user) %></p>
+           <p><%= tuesday.hour %></p>
+           <p><%= link_to '수정', edit_schedule_path(tuesday) %></p>
+           <p><%= link_to '삭제', tuesday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
+        </div>
+        <div class="wednesday">
+          <p>수요일</p>
+          <% @wednesday.each do |wednesday| %>
+           <p><%= link_to wednesday.user.name, user_lessons_path(wednesday.user) %></p>
+           <p><%= wednesday.hour %></p>
+           <p><%= link_to '수정', edit_schedule_path(wednesday) %></p>
+           <p><%= link_to '삭제', wednesday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
+        </div>
+        <div class="thursday">
+          <p>목요일</p>
+          <% @thursday.each do |thursday| %>
+           <p><%= link_to thursday.user.name, user_lessons_path(thursday.user) %></p>
+           <p><%= thursday.hour %></p>
+           <p><%= link_to '수정', edit_schedule_path(thursday) %></p>
+           <p><%= link_to '삭제', thursday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
+        </div>
+        <div class="friday">
+          <p>금요일</p>
+          <% @monday.each do |friday| %>
+           <p><%= link_to friday.user.name, user_lessons_path(friday.user) %></p>
+           <p><%= friday.hour %></p>
+           <p><%= link_to '수정', edit_schedule_path(friday) %></p>
+           <p><%= link_to '삭제', friday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
+        </div>
+        <div class="saturday">
+          <p>토요일</p>
+          <% @saturday.each do |saturday| %>
+           <p><%= link_to saturday.user.name, user_lessons_path(saturday.user) %></p>
+           <p><%= saturday.hour %></p>
+           <p><%= link_to '수정', edit_schedule_path(saturday) %></p>
+           <p><%= link_to '삭제', saturday, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+          <% end %>
+        </div>
+    <br>
+        <div class="bottom">
+        <%= link_to '새 일정 등록', new_schedule_path %>
+        <div>
+  
+  </div>
