--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,9 @@
             </li>
         </ul>
     </div>
-  <%= yield %>
+        <div class="col-md-9">
+          <%= yield %>
+        </div>
 
   </div>
 </body>
