--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
   <div class="row">
     <div class="col-md-3">
         <div class="list-group">
@@ -19,6 +20,7 @@
           <%= yield %>
         </div>
 
+  </div>
   </div>
 </body>
 </html>
