--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -4,7 +4,7 @@
 <% @h.each do |key,value| %> 
 <div class="weekday col-md-2 panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title"><%=key%></h3>
+    <h3 class="panel-title"><%=value%></h3>
   </div>
   <div class="panel-body"> 
     <% eval("@"+key).each do |monday| %>
@@ -20,10 +20,9 @@
     </div>
     <% end %>
   </div>
-
 </div>
  <%end%>
 <br>
 <div class="bottom">
-<%= link_to '새 일정 등록', new_schedule_path %>
+  <%= link_to '새 일정 등록', new_schedule_path %>
 <div>
