--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -11,8 +11,12 @@
     <div class="panel panel-info">
       <div class="panel panel-title">
         <span ><%= monday.hour %></span>
-        <span class="glyphicon glyphicon-wrench"><%= link_to '', edit_schedule_path(monday) %></span>
-        <span class="glyphicon glyphicon-remove"><%= link_to '', monday, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+        <%= link_to edit_schedule_path(monday) do %>
+        <span class="glyphicon glyphicon-wrench"></span>
+        <%end%>
+        <%= link_to monday, method: :delete, data: { confirm: 'Are you sure?' } do %>
+        <span class="glyphicon glyphicon-remove"></span>
+        <%end%>
       </div>
       <p>
         <%= link_to monday.user.name, user_lessons_path(monday.user) %>
