--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to '돌아가기', user_lessons_path %>
+<%= link_to '돌아가기', user_lessons_path, {class: "btn btn-danger pull-left back"} %>
