--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to '뒤로가기', schedules_path %>
+<%= link_to '뒤로가기', schedules_path, {class: "btn btn-danger pull-left back"} %>
