--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,31 +1,30 @@
 <h1>레슨 목록</h1>
 <%=@user.name%>님의 레슨 일정입니다.
-<table>
-  <thead>
+<table class="table table-striped text-center">
+  <thead class="text-center">
     <tr>
-      <th>수업일자</th>
-      <th>차수</th>
-      <th>목표</th>
-      <th>곡명</th>
-      <th>과제</th>
+      <th class="text-center">수업일자</th>
+      <th class="text-center">차수</th>
+      <th class="text-center">목표</th>
+      <th class="text-center">곡명</th>
+      <th class="text-center">과제</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
-  <tbody>
+<tbody>
     <% @lessons.each do |lesson| %>
       <tr>
-          <td><%= link_to lesson.lesson_date, edit_user_lesson_path(@user, lesson) %></td>
+          <td><%= link_to lesson.lesson_date.strftime("%Y년 %m월 %d일"), edit_user_lesson_path(@user, lesson) %></td>
           <td><%= lesson.turn %></td>
           <td><%= lesson.goal %></td>
           <td><%= lesson.song %></td>
           <td><%= lesson.homework %></td>
-        <td><%= link_to 'Destroy', user_lesson_path(@user, lesson), method: :delete, data: { confirm: 'Are you sure?' }%></td>
-      </tr>
+        <td><%= link_to '삭제', user_lesson_path(@user, lesson), method: :delete, data: { confirm: '레슨 일정을 삭제하시겠습니까?' }%></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to '새 레슨 등록하기', new_user_lesson_path %>
+<%= link_to '새 레슨 등록하기', new_user_lesson_path, {class: "btn btn-success"} %>
