--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -27,6 +27,6 @@
   </div>
   
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit("새 일정 등록",{class: "btn btn-success pull-left"}) %>
   </div>
 <% end %>
