--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name, '학생이름' %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :phone %><br>
+    <%= f.label :phone, '전화번호' %><br>
     <%= f.text_field :phone %>
   </div>
   <div class="field">
-    <%= f.label :email %><br>
+    <%= f.label :email, '이메일' %><br>
     <%= f.text_field :email %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+   <%= f.submit("새 학생 등록",{class: "btn btn-success pull-left"}) %>
   </div>
 <% end %>
