--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <h1>학생 목록</h1>
-<table>
+<table class="table table-striped text-center">
   <thead>
     <tr>
-      <th>학생이름</th>
-      <th>전화번호</th>
-      <th>이메일</th>
+      <th class="text-center">학생이름</th>
+      <th class="text-center">전화번호</th>
+      <th class="text-center">이메일</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,7 +12,7 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.name, user_path(user) %></td>
+        <td><%= link_to user.name, user %></td>
         <td><%= user.phone %></td>
         <td><%= user.email %></td>
         <td><%= link_to '레슨보기', user_lessons_path(user) %></td>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to '학생 등록하기', new_user_path %>
+<%= link_to '학생 등록하기', new_user_path, {class: "btn btn-success"} %>
