--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New user</h1>
+<h1>새 학생 등록</h1>
 
 <%= render 'form' %>
 
-<%= link_to '뒤로가기', users_path %>
+<%= link_to '뒤로가기', users_path, {class: "btn btn-danger pull-left back"} %>
